# TubeGuardAI

./: .gitignore  README.md  main.py  pyproject.toml
backend/scripts/: index_documents.py
backend/src/api/: server.py  telemetry.py
backend/src/graph/: nodes.py  state.py  workflow.py
backend/src/services/: video_indexer.py
